fix(regression): race control misalignment

--- a/less/actors.less
+++ b/less/actors.less
@@ -79,9 +79,8 @@
         gap: 4px;
 
         .item-controls {
-          flex: 0 1em;
+          flex: 0 1.5em;
           flex-flow: column nowrap;
-          padding: 0 0.5rem;
 
           a {
             flex: 0 0 12px;
